--- a/iOS/Remote-Sentry-Gun/Base.lproj/Main_iPhone.storyboard
+++ b/iOS/Remote-Sentry-Gun/Base.lproj/Main_iPhone.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GgN-9j-6FB">
-                                <rect key="frame" x="413" y="13" width="152" height="58"/>
+                                <rect key="frame" x="413" y="13" width="155" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="connect.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -27,7 +27,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mLd-eh-FQE">
-                                <rect key="frame" x="20" y="218" width="97" height="79"/>
+                                <rect key="frame" x="4" y="184" width="129" height="105"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="fire.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -81,18 +81,20 @@
                                     <action selector="startRight:" destination="vXZ-lx-hvc" eventType="touchDown" id="ELt-tF-QK0"/>
                                 </connections>
                             </button>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="MJE-oC-Twu">
-                                <rect key="frame" x="31" y="26" width="51" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="onTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="arm:" destination="vXZ-lx-hvc" eventType="valueChanged" id="xgW-Ua-i4e"/>
-                                </connections>
-                            </switch>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rsg_text.png" translatesAutoresizingMaskIntoConstraints="NO" id="Sqz-bz-wVC">
-                                <rect key="frame" x="111" y="8" width="288" height="68"/>
+                                <rect key="frame" x="151" y="13" width="244" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nfh-4P-eIF">
+                                <rect key="frame" x="4" y="13" width="129" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="enable.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="enableOrDisable:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="cEg-my-mKg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -101,9 +103,9 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
-                        <outlet property="arm" destination="MJE-oC-Twu" id="een-G2-8IT"/>
                         <outlet property="buttonConnect" destination="GgN-9j-6FB" id="o57-t1-W2N"/>
                         <outlet property="buttonDown" destination="YwH-he-b05" id="H0I-tR-tT6"/>
+                        <outlet property="buttonEnable" destination="Nfh-4P-eIF" id="fJo-tI-v8J"/>
                         <outlet property="buttonFire" destination="mLd-eh-FQE" id="hRr-2M-nZV"/>
                         <outlet property="buttonLeft" destination="BVY-MQ-kIz" id="XzR-dk-vpG"/>
                         <outlet property="buttonRight" destination="J0V-9b-Hu5" id="V8D-c6-i4M"/>
@@ -118,6 +120,7 @@
     <resources>
         <image name="connect.png" width="306" height="117"/>
         <image name="down_arrow.png" width="300" height="300"/>
+        <image name="enable.png" width="263" height="117"/>
         <image name="fire.png" width="248" height="200"/>
         <image name="left_arrow.png" width="300" height="300"/>
         <image name="right_arrow.png" width="300" height="300"/>
