--- a/iOS/Remote-Sentry-Gun/Base.lproj/Main_iPhone.storyboard
+++ b/iOS/Remote-Sentry-Gun/Base.lproj/Main_iPhone.storyboard
@@ -12,7 +12,7 @@
                         <viewControllerLayoutGuide type="top" id="qqj-7F-wYU"/>
                         <viewControllerLayoutGuide type="bottom" id="YLO-f7-l0m"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS" customClass="SKView">
+                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -27,7 +27,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mLd-eh-FQE">
-                                <rect key="frame" x="4" y="184" width="129" height="105"/>
+                                <rect key="frame" x="4" y="195" width="129" height="105"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="fire.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rsg_text.png" translatesAutoresizingMaskIntoConstraints="NO" id="Sqz-bz-wVC">
-                                <rect key="frame" x="151" y="13" width="244" height="57"/>
+                                <rect key="frame" x="151" y="20" width="244" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nfh-4P-eIF">
